# nidaq_audioplayer

./: .gitignore  README.md  package.json  svelte.config.js  tsconfig.json  vite.config.ts
.svelte-kit/: tsconfig.json
global_triggers/: Cargo.toml
global_triggers/src/: main.rs
src/: app.css  app.html
src-python/: .gitignore  audio_output.py  cmd_linux.sh  cmd_windows.bat  requirements.txt  setup.py  setup_linux.sh  setup_windows.bat  sine_output.py  start_ws_server.bat  start_ws_server.sh
src-python/src/: __init__.py  main.py
src-python/src/nidaq_playback/: __init__.py  buffer_manager.py  player.py
src-python/src/sysinfo/: nidaq_sysinfo.py
src-python/src/ws/: README.md  config.py  message_handler.py  state.py  utils.py  ws.py
src-python/src/ws/tasks/: __init__.py  flip_lr_stereo.py  healthcheck.py  load_audio.py  pause.py  pid.py  play.py  seek.py  set_voltage_scale.py  status.py  terminate.py
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: appstate.rs  lib.rs  main.rs
src-tauri/src/audio/: glob_filter.rs  metadata.rs  mod.rs  multitrack_gen.rs  multitrack_gen.template.yml  pauses.rs  tag_n_vis.rs  test.rs  tracks.rs
src-tauri/src/audio/metadata_extract/: main.rs
src-tauri/src/py_nidaqmx/: mod.rs  pyws.rs  sysinfo.rs
src-tauri/src/utils/: datastore.rs  mod.rs  sysproc.rs  taurithing.rs
src/lib/applications/: sysinfo.ts
src/lib/applications/pyws/: pyws.ts
src/lib/components/app-navigator/: index.ts  navigator-normal.svelte  navigator-xs.svelte  navigator.svelte  navigatorData.svelte.ts
src/lib/components/app-statusbar/: index.ts  statusbar.svelte  statusbarData.svelte.ts  style.css
src/lib/components/app-titlebar/: appmenu.ts  index.ts  menubar.svelte  titlebar.svelte
src/lib/components/media-player/: index.ts  locationSelectorDisplay.svelte.ts  player.svelte  playerData.svelte.ts  style.css
src/lib/components/media-player/tasks/: flip_lr_stereo.svelte.ts  index.ts  load_audio.svelte.ts  pause.svelte.ts  play.svelte.ts  seek.svelte.ts  status.svelte.ts  volume.svelte.ts  wsconnection.svelte.ts  wslistener.svelte.ts
src/lib/components/ui/data-table/: data-table-core.svelte
src/lib/components/ui/select/: select-trigger.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/create/: +page.svelte
src/routes/create/components/timeline-editor-table/: columns.ts  data-table-actions.svelte
src/routes/create/join-gapless/: +page.svelte
src/routes/create/multi-track/: +page.svelte
src/routes/history/: +page.svelte  history.svelte.ts
