[package]
name = "global_triggers"
version = "0.1.0"
edition = "2024"
description = "Trigger play/pause/reset of media player with global shortcuts"
authors = ["Cody Nhan Pham"]

[dependencies]
enigo = "0.5.0"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
panic = "abort"
strip = "debuginfo"