[package]
name = "nidaq_audioplayer"
version = "0.1.0"
description = "NI-DAQmxAudioPlayer"
authors = ["Cody Nhan Pham"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nidaq_audioplayer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde"] }
cue_sheet = "0.3.0"
bwavfile = "2.0.1"
flate2 = "1.1.2"
log = "0.4.27"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
pyo3 = { version = "0.25.1", features = ["extension-module", "auto-initialize"] }
tauri-plugin-log = "2"
tauri-plugin-websocket = "2"
tungstenite = "0.27.0"
symphonia = { version = "0.5.4", features = ["all-formats", "all-codecs"] }
sysinfo = "0.36.1"
walkdir = "2.5.0"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"


[profile.dev.package.flate2]
opt-level = 3

[profile.dev.package.bincode]
opt-level = 3

[profile.release]
codegen-units = 1
